tests/snapshots/integration__integration_tests__list__long_branch_name.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
[2mBranch                                                                   [0m  [2mCommit  [0m  [2mPath[0m
[1m[35mmain                                                                     [0m  [1m[35mb834638e[0m  [1m[35m./main[0m
feature-this-is-a-very-long-branch-name-that-should-test-column-alignment  [2mb834638e[0m  ./feature-this-is-a-very-long-branch-name-that-should-test-column-alignment

[2mShowing 2 worktrees[0m

----- stderr -----
